# sonic-ml

./: .gitignore  README.md  evaluate.py  flow.py  inference.py  model.py  pyproject.toml  server.py  setup.py  tokenizer.py  train.py  tune.py  utils.py
backend/: flow.py  model.py  pyproject.toml  server.py  tokenizer.py  tune.py  utils.py
example_configs/: download_dataset.yml  eval_model.yml  train_model.yml  train_vocab.yml
sonic_ml/: main.py  tasks.py
sonic_ml/architectures/: llama.py  llama2.py  model_factory.py
sonic_ml/commands/: download_data.py  eval_model.py  train_model.py  train_vocab.py
sonic_ml/utils/: db.py  utils.py
