[project]
name = "sonic-ml"
version = "0.1.0"
description = "A CLI tool for training and evaluating language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "datasets>=3.2.0",
    "numpy>=2.2.0",
    "psutil>=6.1.1",
    "redis>=5.2.1",
    "sentencepiece>=0.2.0",
    "setuptools>=75.6.0",
    "supervisor>=4.2.5",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[project.scripts]
sonic = "sonic_ml.main:main"
